[gd_scene load_steps=6 format=3 uid="uid://cvwyykdvxj10"]

[ext_resource type="Script" path="res://scripts/inventory_ui.gd" id="1_k2yd7"]
[ext_resource type="Theme" uid="uid://cb08x6h45w6u" path="res://ui_theme.tres" id="2_gm7pw"]

[sub_resource type="Animation" id="Animation_x7xgv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/PanelContainer2/cannot_close_warning:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/PanelContainer2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1hxk8"]
resource_name = "show_warning"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/PanelContainer2/cannot_close_warning:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/PanelContainer2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k77pp"]
_data = {
"RESET": SubResource("Animation_x7xgv"),
"show_warning": SubResource("Animation_1hxk8")
}

[node name="inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k2yd7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -48.5
offset_right = 333.0
offset_bottom = 48.5
grow_vertical = 2
alignment = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="cannot_close_warning" type="Label" parent="VBoxContainer/PanelContainer2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_gm7pw")
theme_override_colors/font_color = Color(0.847059, 0, 0, 1)
text = "Can't close the inventory
when an item is held"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_gm7pw")

[node name="display" type="TextureRect" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -198.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_gm7pw")
theme_override_constants/margin_top = 80

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_gm7pw")

[node name="stash_ui" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="warning" type="Label" parent="MarginContainer/PanelContainer/stash_ui"]
layout_mode = 2
theme = ExtResource("2_gm7pw")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/stash_ui"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="MarginContainer/PanelContainer/stash_ui/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_gm7pw")
allow_reselect = true
allow_search = false

[node name="control_hint" type="Label" parent="MarginContainer/PanelContainer/stash_ui"]
layout_mode = 2
theme = ExtResource("2_gm7pw")
text = "WASD - move item
R - rotate item
Backspace - move item to stash
Enter - pick up/place item"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k77pp")
}

[connection signal="item_selected" from="MarginContainer/PanelContainer/stash_ui/ScrollContainer/ItemList" to="." method="_on_item_selected"]
